--- a/config/rubocop/rubocop.yml
+++ b/config/rubocop/rubocop.yml
@@ -429,3 +429,8 @@ Style/HashTransformKeys:
 # version 1 からは強制 true
 Style/HashTransformValues:
   Enabled: true
+
+Lint/RaiseException:
+  Enabled: true
+Lint/StructNewOverride:
+  Enabled: true
