--- a/config/rubocop/rubocop.yml
+++ b/config/rubocop/rubocop.yml
@@ -414,7 +414,7 @@ Style/WordArray:
 #   else
 #   end
 # に修正されるのが嫌。
-# 中身を入れ替えて否定外しても良いんだけど、どちらが例外的な処理なのかが分かりづらくなる。
+# 中身を入れ替えて否定外しても良いんだけど、どちらが例外的な処理なのかが分かりづらくなる
 Style/ZeroLengthPredicate:
   Enabled: false
 
